@@ -134,3 +134,4 @@ v 1.9:
 	      - vanish.standard
 	- Track the 'onPlayerChangeWorld' event as some teleports seem to not be triggering a world move.
 	- Catch all errors in badly formatted groups.
+	- Fix a bug with getWorldData return the main world data for all mirrors, instead of the worlds parent data.
